--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,34 @@
-__pycache__
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+
+# Virtual Environment
 venv/
+.venv/
+env/
+ENV/
+
+# Environment Variables
 .env
+.env.local
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Database
+*.db
+*.sqlite3
+
+# Alembic
+versions/__pycache__/
+
+# OS
+.DS_Store
+Thumbs.db
